--- a/LibraryOS/src/pages/home/home.html
+++ b/LibraryOS/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar transparent>
     <ion-title>
-      Books
+      Library OS
     </ion-title>
     <ion-buttons end>
       <!--<button ion-button icon-only [navPush]="addbookpage">-->
